--- a/html/PBWLO/PBWLO01002_01.html
+++ b/html/PBWLO/PBWLO01002_01.html
@@ -17,14 +17,12 @@
 	<script src="../../resources/plugins/quill/2.0.2/quill.js"></script>
 	<script src="../../resources/plugins/quill/quill-resize-module/quill-resize-module.min.js"></script>
 	<!-- jstree -->
-
 	<link rel="stylesheet" href="../../resources/plugins/jstree/3.3.16/themes/default/style.min.css">
 	<script src="../../resources/plugins/jstree/3.3.16/jstree.min.js"></script>
 	<!-- micromodal -->
 	<link rel="stylesheet" href="../../resources/plugins/micromodal/0.4.10/micromodal.css">
 	<script src="../../resources/plugins/micromodal/0.4.10/micromodal.min.js"></script>
 	<!-- sortable -->
-
 	<script src="../../resources/plugins/sortable/1.15.2/Sortable.min.js"></script>
 	<!-- sweetalert2 -->
 	<link rel="stylesheet" href="../../resources/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
@@ -100,7 +98,7 @@
 
 									<div class="form">
 										<div class="input-wrap input-btn">
-											<input type="tel" placeholder="행번을 입력하세요." title="행번 입력">
+											<input type="tel" placeholder="행번을 입력하세요." aria-label="행번 입력">
 											<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 										</div>
 										<p class="validate-text"></p>
@@ -108,7 +106,7 @@
 
 									<div class="form">
 										<div class="input-wrap input-btn">
-											<input type="password" placeholder="비밀번호를 입력하세요." title="비밀번호 입력">
+											<input type="password" placeholder="비밀번호를 입력하세요." aria-label="비밀번호 입력">
 											<button type="button" class="input-password" aria-label="비밀번호 표시"></button>
 										</div>
 										<p class="validate-text"></p>
