--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -17,14 +17,12 @@
 	<script src="../../resources/plugins/quill/2.0.2/quill.js"></script>
 	<script src="../../resources/plugins/quill/quill-resize-module/quill-resize-module.min.js"></script>
 	<!-- jstree -->
-
 	<link rel="stylesheet" href="../../resources/plugins/jstree/3.3.16/themes/default/style.min.css">
 	<script src="../../resources/plugins/jstree/3.3.16/jstree.min.js"></script>
 	<!-- micromodal -->
 	<link rel="stylesheet" href="../../resources/plugins/micromodal/0.4.10/micromodal.css">
 	<script src="../../resources/plugins/micromodal/0.4.10/micromodal.min.js"></script>
 	<!-- sortable -->
-
 	<script src="../../resources/plugins/sortable/1.15.2/Sortable.min.js"></script>
 	<!-- sweetalert2 -->
 	<link rel="stylesheet" href="../../resources/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
@@ -102,7 +100,7 @@
 						<div class="form">
 							<div class="label"></div>
 							<div class="input-wrap input-btn">
-								<input type="search" placeholder="이름, 회사명으로 검색해 보세요." title="검색">
+								<input type="search" placeholder="이름, 회사명으로 검색해 보세요." aria-label="검색">
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
 							<p class="validate-text"></p>
@@ -350,7 +348,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" title="이름" placeholder="">
+										<input type="search" aria-label="이름" placeholder="">
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -367,7 +365,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" title="회사" placeholder="">
+										<input type="search" aria-label="회사" placeholder="">
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -384,7 +382,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap input-btn">
-										<input type="tel" title="휴대폰 번호" placeholder="‘-’ 없이 숫자만 입력">
+										<input type="tel" aria-label="휴대폰 번호" placeholder="‘-’ 없이 숫자만 입력">
 										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
@@ -402,7 +400,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" title="부서" placeholder="">
+										<input type="search" aria-label="부서" placeholder="">
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -419,7 +417,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap input-btn">
-										<input type="search" title="직책" placeholder="">
+										<input type="search" aria-label="직책" placeholder="">
 										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
@@ -437,7 +435,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap input-btn">
-										<input type="email" title="이메일" placeholder="">
+										<input type="email" aria-label="이메일" placeholder="">
 										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
@@ -455,7 +453,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap input-btn">
-										<input type="tel" title="전화번호" placeholder="">
+										<input type="tel" aria-label="전화번호" placeholder="">
 										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
@@ -473,7 +471,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap input-btn">
-										<input type="tel" title="팩스번호" placeholder="">
+										<input type="tel" aria-label="팩스번호" placeholder="">
 										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
@@ -491,7 +489,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" title="주소">
+										<input type="search" aria-label="주소">
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -507,7 +505,7 @@
 							<div class="group-content">
 								<div class="form">
 									<div class="input-wrap">
-										<textarea title="메모"></textarea>
+										<textarea aria-label="메모"></textarea>
 									</div>
 									<div class="textarea-length">0/300자</div>
 								</div>
