--- a/html/PBWCL/PBWCL000000.html
+++ b/html/PBWCL/PBWCL000000.html
@@ -102,7 +102,8 @@
 						<div class="group-content">
 							<div class="form">
 								<div class="input-wrap input-btn">
-									<input type="search" placeholder="통합고객번호" aria-label="통합고객번호">
+									<input type="tel" pattern="\d*" placeholder="통합고객번호" aria-label="통합고객번호">
+									<button type="button" class="input-remove-small" aria-label="입력 내용 삭제"></button>
 									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 								</div>
 							</div>
