--- a/html/PBWBU/PBWBU010001_modify.html
+++ b/html/PBWBU/PBWBU010001_modify.html
@@ -534,7 +534,7 @@
 				},
 				buttonsStyling: false,
 				html: `
-                    <i class="icon-only icon-48 icon-camera bg-icon bg-icon-gray_1"></i>
+                    <i class="icon-only icon-48 icon-camera bg-icon-gray_1"></i>
                     <strong class="title-large mt8">명함 촬영 안내</strong>
                     <p class="body-large mt8">휴대폰 세로 모드로 촬영하세요.</p>
                     <picture class="d-flex j-center mt16">
