--- a/html/PBWBU/PBWBU020001_share.html
+++ b/html/PBWBU/PBWBU020001_share.html
@@ -371,31 +371,31 @@
 				<ul>
 					<li>
 						<button type="button">
-							<i class="icon-only icon-36 icon-phone bg-icon bg-status-active"></i>
+							<i class="icon-only icon-36 icon-phone bg-status-active"></i>
 							<span>휴대폰</span>
 						</button>
 					</li>
 					<li>
 						<button type="button">
-							<i class="icon-only icon-36 icon-sms bg-icon bg-status-active"></i>
+							<i class="icon-only icon-36 icon-sms bg-status-active"></i>
 							<span>문자</span>
 						</button>
 					</li>
 					<li>
 						<button type="button">
-							<i class="icon-only icon-36 icon-mail bg-icon bg-status-active"></i>
+							<i class="icon-only icon-36 icon-mail bg-status-active"></i>
 							<span>이메일</span>
 						</button>
 					</li>
 					<li>
 						<button type="button">
-							<i class="icon-only icon-36 icon-call bg-icon bg-status-active"></i>
+							<i class="icon-only icon-36 icon-call bg-status-active"></i>
 							<span>회사전화</span>
 						</button>
 					</li>
 					<li>
 						<button type="button">
-							<i class="icon-only icon-36 icon-memo bg-icon bg-status-active"></i>
+							<i class="icon-only icon-36 icon-memo bg-status-active"></i>
 							<span>메모 </span>
 						</button>
 					</li>
