--- a/html/PBWFU/PBWFU000000_result.html
+++ b/html/PBWFU/PBWFU000000_result.html
@@ -194,7 +194,7 @@
 								</div>
 								<div class="favorite-btn-wrap" data-toggle="toggle-wrap">
 									<button type="button" data-toggle="toggle-trigger">
-										<i class="icon-only icon-36 icon-fav bg-icon" data-switch-inner="true" data-switch-inner-before="icon-fav" data-switch-inner-after="icon-fav-active"></i>
+										<i class="icon-only icon-36 icon-fav " data-switch-inner="true" data-switch-inner-before="icon-fav" data-switch-inner-after="icon-fav-active"></i>
 										<span class="toggle-off blind">관심펀드 등록</span>
 										<span class="toggle-on blind">관심펀드 등록해제</span>
 									</button>
@@ -245,7 +245,7 @@
 								</div>
 								<div class="favorite-btn-wrap" data-toggle="toggle-wrap">
 									<button type="button" data-toggle="toggle-trigger" id="success">
-										<i class="icon-only icon-36 icon-fav bg-icon" data-switch-inner="true" data-switch-inner-before="icon-fav" data-switch-inner-after="icon-fav-active"></i>
+										<i class="icon-only icon-36 icon-fav " data-switch-inner="true" data-switch-inner-before="icon-fav" data-switch-inner-after="icon-fav-active"></i>
 										<span class="toggle-off blind">관심펀드 등록</span>
 										<span class="toggle-on blind">관심펀드 등록해제</span>
 									</button>
