--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -123,7 +123,7 @@
 
 							<div class="favorite-btn-wrap" data-toggle="toggle-wrap">
 								<button type="button" data-toggle="toggle-trigger" id="success">
-									<i class="icon-only icon-36 bg-icon icon-fav" data-switch-inner="true" data-switch-inner-before="icon-fav" data-switch-inner-after="icon-fav-active"></i>
+									<i class="icon-only icon-36 icon-fav" data-switch-inner="true" data-switch-inner-before="icon-fav" data-switch-inner-after="icon-fav-active"></i>
 									<span class="toggle-off blind">관심펀드 등록</span>
 									<span class="toggle-on blind">관심펀드 등록해제</span>
 								</button>
@@ -276,37 +276,35 @@
 							<h4 class="headline-small">수수료 및 보수</h4>
 
 							<div class="table-layout">
-								<div class="table">
-									<div class="tbody">
-										<div class="tr">
-											<div class="th">
-												<div class="group gap2 py0 j-start">
-													<div>선취 수수료</div>
-													<button type="button" class="d-flex" data-tippy="펀드 매수 시 지불하는 수수료입니다."><i class="icon-only icon-14 icon-info bg-icon bg-status-info"></i></button>
-												</div>
+								<div class="tbody">
+									<div class="tr">
+										<div class="th">
+											<div class="group gap2 py0 j-start">
+												<div>선취 수수료</div>
+												<button type="button" class="d-flex" data-tippy="펀드 매수 시 지불하는 수수료입니다."><i class="icon-only icon-14 icon-info bg-status-info"></i></button>
+											</div>
+
+										</div>
+										<div class="td">
+											납입 금액의 0.5%
+										</div>
+									</div>
+									<div class="tr">
+										<div class="th">총 보수</div>
+										<div class="td">연1.341%
+											<p class="fc-typography-caption fs-14 fw-400">(판매 0.325%, 운용 0.85%, 수탁 0.05%, 사무 0.02%, 기타 0.096%)</p>
+										</div>
+									</div>
+									<div class="tr">
+										<div class="th">
+											<div class="group gap2 py0 j-start">
+												<div>환매 수수료</div>
+												<button type="button" class="d-flex" data-tippy="계약기간 이전 중도에 펀드를 환매할 시 <br> 발생하는 수수료 입니다."><i class="icon-only icon-14 icon-info bg-status-info"></i></button>
 
 											</div>
-											<div class="td">
-												납입 금액의 0.5%
-											</div>
 										</div>
-										<div class="tr">
-											<div class="th">총 보수</div>
-											<div class="td">연1.341%
-												<p class="fc-typography-caption fs-14 fw-400">(판매 0.325%, 운용 0.85%, 수탁 0.05%, 사무 0.02%, 기타 0.096%)</p>
-											</div>
-										</div>
-										<div class="tr">
-											<div class="th">
-												<div class="group gap2 py0 j-start">
-													<div>환매 수수료</div>
-													<button type="button" class="d-flex" data-tippy="계약기간 이전 중도에 펀드를 환매할 시 <br> 발생하는 수수료 입니다."><i class="icon-only icon-14 icon-info bg-icon bg-status-info"></i></button>
-
-												</div>
-											</div>
-											<div class="td">
-												없음
-											</div>
+										<div class="td">
+											없음
 										</div>
 									</div>
 								</div>
