--- a/html/index.html
+++ b/html/index.html
@@ -145,6 +145,16 @@
 						<td></td>
 						<td></td>
 						<td></td>
+						<td>Datepicker</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_datepicker</a></td>
+						<td></td>
+					</tr>
+
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td>Group</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_group</a></td>
 						<td></td>
@@ -627,19 +637,19 @@
 					<tr>
 						<td></td>
 						<td></td>
+						<td>조회 결과</td>
 						<td></td>
 						<td></td>
-						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow"></a></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL020000</a></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td></td>
 						<td></td>
+						<td>기업정보 조회</td>
 						<td></td>
 						<td></td>
-						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow"></a></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL030000</a></td>
 						<td></td>
 					</tr>
 				</tbody>
