--- a/html/PBWCL/PBWCL030000.html
+++ b/html/PBWCL/PBWCL030000.html
@@ -212,6 +212,248 @@
 	</div>
 	<!-- //micromodal -->
 
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom micromodal-slide-bottom-full modal is-open">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="modal__header">
+					<strong class="modal__title title-large">표준산업별 선택</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close=""></button>
+				</div>
+				<div class="modal__content">
+
+					<div class="content content-fluid">
+						<div class="accordion-select">
+							<div class="dep01">
+								<button class="accordion-select-all">전체</button>
+								<button class="accordion-select-all is-selected">전체</button>
+								<ul class="accordion-select-list">
+									<li>
+										<button type="button" class="anchor chevron anchor-fluid">농업,임업 및 어업</button>
+										<div class="dep02">
+											<div class="history-back"><button type="button">농업,임업 및 어업</button></div>
+											<ul>
+												<li>
+													<button type="button">C10 식료품 제조업</button>
+													<ul>
+														<li>
+															<button type="button">C101 도축, 육류 가공 및 저장 처리업</button>
+															<ul>
+																<li>
+																	<button type="button">C1011 도축업</button>
+																	<ul>
+																		<li>
+																			<button type="button">C10111 육류 도축업(가금류 제외)</button>
+																		</li>
+																		<li>
+																			<button type="button">C10112 가금류 도축업</button>
+																		</li>
+																		<li>
+																			<button type="button">C10113 가금류 도축업, 가금류 도축업, 가금류 도축업, 가금류 도축업, 가금류 도축업</button>
+																			<ul>
+																				<li>
+																					<button type="button">C10111 육류 도축업(가금류 제외)</button>
+																				</li>
+																				<li>
+																					<button type="button">C10112 가금류 도축업</button>
+																				</li>
+																				<li>
+																					<button type="button">C10113 가금류 도축업, 가금류 도축업, 가금류 도축업, 가금류 도축업, 가금류 도축업</button>
+																				</li>
+																			</ul>
+																		</li>
+																	</ul>
+																</li>
+																<li>
+																	<button type="button">C1012 육류 가공 및 저장 처리업</button>
+																</li>
+															</ul>
+														</li>
+													</ul>
+												</li>
+												<li>
+													<button type="button">C14 의복, 의복 엑세서리 및 모피제품 제조업</button>
+													<ul>
+														<li>
+															<button type="button">C101 도축, 육류 가공 및 저장 처리업</button>
+															<ul>
+																<li>
+																	<button type="button">C1011 도축업</button>
+																	<ul>
+																		<li>
+																			<button type="button">C10111 육류 도축업(가금류 제외)</button>
+																		</li>
+																		<li>
+																			<button type="button">C10112 가금류 도축업</button>
+																		</li>
+																	</ul>
+																</li>
+																<li>
+																	<button type="button">C1012 육류 가공 및 저장 처리업</button>
+																</li>
+															</ul>
+														</li>
+													</ul>
+												</li>
+											</ul>
+										</div>
+									</li>
+									<li>
+										<button type="button" class="anchor chevron anchor-fluid">제조업</button>
+										<div class="dep02">
+											<div class="history-back"><button type="button">제조업</button></div>
+											<ul>
+												<li>
+													<button type="button">C10 식료품 제조업</button>
+													<ul>
+														<li>
+															<button type="button">C101 도축, 육류 가공 및 저장 처리업</button>
+															<ul>
+																<li>
+																	<button type="button">C1011 도축업</button>
+																	<ul>
+																		<li>
+																			<button type="button">C10111 육류 도축업(가금류 제외)</button>
+																		</li>
+																		<li>
+																			<button type="button">C10112 가금류 도축업</button>
+																		</li>
+																	</ul>
+																</li>
+																<li>
+																	<button type="button">C1012 육류 가공 및 저장 처리업</button>
+																</li>
+															</ul>
+														</li>
+													</ul>
+												</li>
+											</ul>
+										</div>
+									</li>
+									<li>
+										<button type="button" class="anchor chevron anchor-fluid">제조업</button>
+										<div class="dep02">
+											<div class="history-back"><button type="button">제조업</button></div>
+										</div>
+									</li>
+									<li>
+										<button type="button" class="anchor chevron anchor-fluid">전기, 가스, 증기 및 공기조절 공급업</button>
+										<div class="dep02">
+											<div class="history-back"><button type="button">전기, 가스, 증기 및 공기조절 공급업</button></div>
+										</div>
+									</li>
+									<li>
+										<button type="button" class="anchor chevron anchor-fluid">수도, 하수 및 폐기물 처리, 원료 재생업</button>
+										<div class="dep02">
+											<div class="history-back"><button type="button">수도, 하수 및 폐기물 처리, 원료 재생업</button></div>
+										</div>
+									</li>
+									<li>
+										<button type="button" class="anchor chevron anchor-fluid">건설업</button>
+										<div class="dep02">
+											<div class="history-back"><button type="button">건설업</button></div>
+										</div>
+									</li>
+									<li>
+										<button type="button" class="anchor chevron anchor-fluid">광업</button>
+										<div class="dep02">
+											<div class="history-back"><button type="button">광업</button></div>
+										</div>
+									</li>
+									<li>
+										<button type="button" class="anchor chevron anchor-fluid">광업</button>
+										<div class="dep02">
+											<div class="history-back"><button type="button">광업</button></div>
+										</div>
+									</li>
+								</ul>
+							</div>
+
+						</div>
+					</div>
+
+				</div>
+
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close>선택완료</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+	<script>
+		const acc = {
+			init: function() {
+				$accList = $('.accordion-select-list');
+				$accListAnchor = $accList.find('.anchor');
+				$accListHistoryBack = $accList.find('.history-back');
+				$dep02 = $accList.find('.dep02');
+				let dep01 = '';
+				let depthList = '';
+				let dep02 = '';
+				let dep02AccTrigger = '';
+				let dep02List = '';
+				this.depthIn();
+				this.historyBack();
+				this.depth02();
+			},
+			depthIn: function() {
+				$accListAnchor.on('click', function() {
+					dep01 = $(this).closest('.dep01');
+					dep01.addClass('dep02-show');
+
+					depthList = $(this).closest('li');
+					depthList.addClass('is-selected');
+
+					dep02 = depthList.find('>.dep02');
+					dep02.show();
+					// acc.depth02();
+
+				})
+
+
+			},
+			historyBack: function() {
+				$accListHistoryBack.on('click', function() {
+					dep01.removeClass('dep02-show');
+					depthList.removeClass('is-selected');
+					dep02 = $(this).closest('.dep02')
+					setTimeout(function() {
+						dep02.hide();
+						acc.reset();
+					}, 300)
+
+
+				})
+
+			},
+			depth02: function() {
+				dep02AccTrigger = $dep02.find('button');
+				dep02AccTrigger.on('click', function() {
+					dep02List = $(this).closest('li')
+					if (dep02List.hasClass('is-acc')) {
+						dep02List.removeClass('is-acc');
+					} else {
+						dep02List.addClass('is-acc');
+						dep02List.siblings('li').removeClass('is-acc')
+					}
+				})
+			},
+			reset: function() {
+				$dep02.find('li').each(function() {
+					$(this).removeClass('is-acc');
+				})
+			}
+		}
+		acc.init();
+	</script>
 </body>
 
 </html>
