--- a/html/PBWCL/PBWCL070000.html
+++ b/html/PBWCL/PBWCL070000.html
@@ -94,82 +94,48 @@
 				<div class="content">
 
 
-					<!-- group-form -->
-					<div class="group-form mt16">
-						<div class="group-title">
-							<strong class="title-medium">검색대상</strong>
-						</div>
-						<div class="group-content">
-							<div class="form">
-								<button class="select" data-micromodal-trigger="modal-select-list" data-placeholder="선택하세요"><span>기업명</span></button>
-							</div>
-							<div class="form">
-								<div class="input-wrap">
-									<input type="search" placeholder="검색어를 2자 이상 입력해주세요." aria-label="검색대상">
+					<style>
+						body {
+							background-color: var(--background-bg_lightGray);
+						}
+					</style>
+
+					<!-- customer-card-list -->
+					<div class="customer-card-list mt40">
+						<strong class="search-result">검색결과</strong>
+						<a href="#" class="customer-card">
+							<strong class="anchor chevron anchor-fluid title-medium p0 fc-typography-title fw-700">삼성중공업</strong>
+							<div class="info-detail-list p0 bg-white-100">
+								<div class="info-table">
+									<div class="info-body">
+										<div class="info-row">
+											<div class="info-th fc-typography-black px0">대표자명</div>
+											<div class="info-td ar">가의정</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th fc-typography-black px0">기업상태</div>
+											<div class="info-td ar">정상</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th fc-typography-black px0">사업자번호</div>
+											<div class="info-td ar">120-00-00000</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th fc-typography-black px0">업종</div>
+											<div class="info-td ar">강선 건조업</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th fc-typography-black px0">주소</div>
+											<div class="info-td ar">경기도 성남시 분당구 판교로 227번길(삼평동)</div>
+										</div>
+									</div>
 								</div>
 							</div>
-						</div>
+						</a>
+
 					</div>
-					<!-- //group-form -->
+					<!-- //customer-card-list -->
 
-					<div class="stroke my24"></div>
-
-
-					<!-- group-form -->
-					<div class="group-form mt16">
-						<div class="group-content">
-							<div class="form">
-								<button type="button" class="anchor chevron anchor-fluid anchor-border" data-micromodal-trigger="modal-job"><span class="body-large fw-700">업종 전체</span></button>
-							</div>
-							<div class="form">
-								<button type="button" class="anchor chevron anchor-fluid anchor-border" data-micromodal-trigger="modal-region"><span class="body-large fw-700">지역 전체</span></button>
-							</div>
-						</div>
-					</div>
-					<!-- //group-form -->
-
-
-					<!-- group-form -->
-					<div class="group-form mt40 py16">
-						<div class="group-title">
-							<strong class="title-medium fw-500">최근 조회 기업</strong>
-						</div>
-						<div class="group-content mt12">
-							<ul class="overflow-list content-fluid">
-								<li>
-									<div class="btn-xsmall btn-outlined btn-round">
-										<button class="btn-inner">삼성중공업(주)</button>
-										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
-									</div>
-								</li>
-								<li>
-									<div class="btn-xsmall btn-outlined btn-round">
-										<button class="btn-inner">(주)우리이앤지</button>
-										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
-									</div>
-								</li>
-								<li>
-									<div class="btn-xsmall btn-outlined btn-round">
-										<button class="btn-inner">삼성전자(주)</button>
-										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
-									</div>
-								</li>
-								<li>
-									<div class="btn-xsmall btn-outlined btn-round">
-										<button class="btn-inner">키워드</button>
-										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
-									</div>
-								</li>
-								<li>
-									<div class="btn-xsmall btn-outlined btn-round">
-										<button class="btn-inner">키워드</button>
-										<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
-									</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<!-- //group-form -->
 
 				</div>
 				<!-- //content -->
