--- a/html/index.html
+++ b/html/index.html
@@ -652,6 +652,16 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWCL030000</a></td>
 						<td></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>상세</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCL070000</a></td>
+						<td></td>
+					</tr>
+
 				</tbody>
 
 
